# C-Distribution-Test

./: .gitignore  CMakeLists.txt  NormalTest.h  README.md  TestDistribution.h  UniformTest.h  main.cpp  vcpkg.json
